respect plugin manifest env and required mods